[package]
name = "openhems-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
json = "*"
serde = "*"
serde_json = "*"
# config-manager = "*"
# config = "0.15.11"
yaml-rust2 = "*"
arrayvec = "*"
log = "*"
chrono = "*"
env_logger = "*"
# rfbutton = "0.1.1"
datetime = "*"
iso8601 = "0.6.2"
regex = "1.11.1"
lazy_static = "1.5.0"
