[package]
name = "openhems-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
json = "*"
serde = "*"
serde_json = "*"
# config-manager = "*"
# config = "0.15.11"
yaml-rust2 = "*"
arrayvec = "*"
log = "*"
chrono = "*"
env_logger = "*"
# rfbutton = "0.1.1"
datetime = "*"
iso8601 = "0.6.2"
regex = "1.11.1"
lazy_static = "1.5.0"
hashlink = "0.10.0"
actix-web = "4.11.0"
futures = "0.3.31"
rocket = "0.5.1"
axum = "0.8.4"
axum-server = "0.7.2"
